@@ -12,6 +12,9 @@ Revision history for DBIx::Class::Sims (ordered by revision number).
      provided spec.
      - Set `die_on_unique_mismatch => 0` to disable this
    - Using a type that isn't loaded will raise an error vs a warning.
+   - Relationship constraints are now lazily checked.
+     - If you say there should be 2 children, Sims will wait until all children
+       are created before verifying that the constraint is met.
 
 0.401000 Jun 09 2019 12:30:00 PDT
    - Provide a nice way to print DateTime objects in SIMS_DEBUG mode.
